api_versioned_docs/version-12.1.2/avalonia/input/textinput/textinputoptions.mdx
---
title: 'TextInputOptions'
hide_title: true
slug: '/avalonia/input/textinput/textinputoptions'
uid: 'Avalonia.Input.TextInput.TextInputOptions'
commentId: 'T:Avalonia.Input.TextInput.TextInputOptions'
docset: 'avalonia-docs'
packageId: 'Avalonia'
assembly: 'Avalonia.Base'
apiKind: 'Class'
generatedBy: 'dotnet-apiref'
namespace: 'Avalonia.Input.TextInput'
tfms:
  - 'net10.0'
---

import ApiRefPage from '@site/src/components/apiref/ApiRefPage';

<ApiRefPage>

<h1 className="apiref-page__title">TextInputOptions Class</h1>

## Definition

<div className="apiref-page__definition-meta">
<div className="apiref-page__meta-row">
<span className="apiref-page__meta-label">Namespace:</span> <a href="./">Avalonia.Input.TextInput</a>
</div>
<div className="apiref-page__meta-row">
<span className="apiref-page__meta-label">Assembly:</span> <code>Avalonia.Base</code>
</div>
<div className="apiref-page__meta-row">
<span className="apiref-page__meta-label">Package:</span> <code>Avalonia</code>
</div>
</div>

<div className="apiref-page__signature">

```csharp
public class TextInputOptions
```

</div>

<div className="apiref-page__relations">
<div className="apiref-page__meta-row">
<span className="apiref-page__meta-label">Inheritance:</span> object <span className="apiref-page__relation-separator">-&gt;</span> TextInputOptions
</div>
</div>

## Constructors

| Name | Description |
| --- | --- |
| [TextInputOptions](#uid-01b2fb7ce8) | No summary available. |

<section className="apiref-page__member-entry">

<span id="uid-01b2fb7ce8"></span>

### TextInputOptions Constructor

```csharp
public TextInputOptions()
```

</section>

## Methods

| Name | Description |
| --- | --- |
| [FromStyledElement](#uid-f5f9b1f731) | No summary available. |
| [GetAutoCapitalization](#uid-cdf3f2b490) | Gets the value of the attached [Avalonia.Input.TextInput.TextInputOptions.AutoCapitalizationProperty](xref:Avalonia.Input.TextInput.TextInputOptions.AutoCapitalizationProperty). |
| [GetContentType](#uid-b43268833d) | Gets the value of the attached [Avalonia.Input.TextInput.TextInputOptions.ContentTypeProperty](xref:Avalonia.Input.TextInput.TextInputOptions.ContentTypeProperty). |
| [GetIsSensitive](#uid-27db08f530) | Gets the value of the attached [Avalonia.Input.TextInput.TextInputOptions.IsSensitiveProperty](xref:Avalonia.Input.TextInput.TextInputOptions.IsSensitiveProperty). |
| [GetLocaleHints](#uid-7c6ed71c52) | Gets the value of the attached [Avalonia.Input.TextInput.TextInputOptions.LocaleHintsProperty](xref:Avalonia.Input.TextInput.TextInputOptions.LocaleHintsProperty). |
| [GetLowercase](#uid-1313e418df) | Gets the value of the attached [Avalonia.Input.TextInput.TextInputOptions.LowercaseProperty](xref:Avalonia.Input.TextInput.TextInputOptions.LowercaseProperty). |
| [GetMultiline](#uid-25c7b5ce46) | Gets the value of the attached [Avalonia.Input.TextInput.TextInputOptions.MultilineProperty](xref:Avalonia.Input.TextInput.TextInputOptions.MultilineProperty). |
| [GetReturnKeyType](#uid-3916425cd2) | Gets the value of the attached [Avalonia.Input.TextInput.TextInputOptions.ReturnKeyTypeProperty](xref:Avalonia.Input.TextInput.TextInputOptions.ReturnKeyTypeProperty). |
| [GetShowSuggestions](#uid-1ee95a6274) | Gets the value of the attached [Avalonia.Input.TextInput.TextInputOptions.ShowSuggestionsProperty](xref:Avalonia.Input.TextInput.TextInputOptions.ShowSuggestionsProperty). |
| [GetUppercase](#uid-36255038be) | Gets the value of the attached [Avalonia.Input.TextInput.TextInputOptions.UppercaseProperty](xref:Avalonia.Input.TextInput.TextInputOptions.UppercaseProperty). |
| [SetAutoCapitalization](#uid-3059291c6b) | Sets the value of the attached [Avalonia.Input.TextInput.TextInputOptions.AutoCapitalizationProperty](xref:Avalonia.Input.TextInput.TextInputOptions.AutoCapitalizationProperty) on a control. |
| [SetContentType](#uid-12d030e7c0) | Sets the value of the attached [Avalonia.Input.TextInput.TextInputOptions.ContentTypeProperty](xref:Avalonia.Input.TextInput.TextInputOptions.ContentTypeProperty) on a control. |
| [SetIsSensitive](#uid-fbcf93aa90) | Sets the value of the attached [Avalonia.Input.TextInput.TextInputOptions.IsSensitiveProperty](xref:Avalonia.Input.TextInput.TextInputOptions.IsSensitiveProperty) on a control. |
| [SetLocaleHints](#uid-687022e5bd) | No summary available. |
| [SetLowercase](#uid-42a2046c2a) | Sets the value of the attached [Avalonia.Input.TextInput.TextInputOptions.LowercaseProperty](xref:Avalonia.Input.TextInput.TextInputOptions.LowercaseProperty) on a control. |
| [SetMultiline](#uid-f03a3b604e) | Sets the value of the attached [Avalonia.Input.TextInput.TextInputOptions.MultilineProperty](xref:Avalonia.Input.TextInput.TextInputOptions.MultilineProperty) on a control. |
| [SetReturnKeyType](#uid-882a011968) | Sets the value of the attached [Avalonia.Input.TextInput.TextInputOptions.ReturnKeyTypeProperty](xref:Avalonia.Input.TextInput.TextInputOptions.ReturnKeyTypeProperty) on a control. |
| [SetShowSuggestions](#uid-4bebe89071) | No summary available. |
| [SetUppercase](#uid-d8d5eafd7e) | Sets the value of the attached [Avalonia.Input.TextInput.TextInputOptions.UppercaseProperty](xref:Avalonia.Input.TextInput.TextInputOptions.UppercaseProperty) on a control. |

<section className="apiref-page__member-entry">

<span id="uid-f5f9b1f731"></span>

### FromStyledElement Method

```csharp
public Avalonia.Input.TextInput.TextInputOptions FromStyledElement(Avalonia.StyledElement avaloniaObject)
```

#### Parameters

`avaloniaObject` [Avalonia.StyledElement](xref:Avalonia.StyledElement)


#### Returns

[Avalonia.Input.TextInput.TextInputOptions](xref:Avalonia.Input.TextInput.TextInputOptions)


</section>

<section className="apiref-page__member-entry">

<span id="uid-cdf3f2b490"></span>

### GetAutoCapitalization Method

Gets the value of the attached [Avalonia.Input.TextInput.TextInputOptions.AutoCapitalizationProperty](xref:Avalonia.Input.TextInput.TextInputOptions.AutoCapitalizationProperty).

```csharp
public bool GetAutoCapitalization(Avalonia.StyledElement avaloniaObject)
```

#### Parameters

`avaloniaObject` [Avalonia.StyledElement](xref:Avalonia.StyledElement)

The target.


#### Returns

bool

true if AutoCapitalization


</section>

<section className="apiref-page__member-entry">

<span id="uid-b43268833d"></span>

### GetContentType Method

Gets the value of the attached [Avalonia.Input.TextInput.TextInputOptions.ContentTypeProperty](xref:Avalonia.Input.TextInput.TextInputOptions.ContentTypeProperty).

```csharp
public Avalonia.Input.TextInput.TextInputContentType GetContentType(Avalonia.StyledElement avaloniaObject)
```

#### Parameters

`avaloniaObject` [Avalonia.StyledElement](xref:Avalonia.StyledElement)

The target.


#### Returns

[Avalonia.Input.TextInput.TextInputContentType](xref:Avalonia.Input.TextInput.TextInputContentType)

[TextInputContentType](xref:Avalonia.Input.TextInput.TextInputContentType)


</section>

<section className="apiref-page__member-entry">

<span id="uid-27db08f530"></span>

### GetIsSensitive Method

Gets the value of the attached [Avalonia.Input.TextInput.TextInputOptions.IsSensitiveProperty](xref:Avalonia.Input.TextInput.TextInputOptions.IsSensitiveProperty).

```csharp
public bool GetIsSensitive(Avalonia.StyledElement avaloniaObject)
```

#### Parameters

`avaloniaObject` [Avalonia.StyledElement](xref:Avalonia.StyledElement)

The target.


#### Returns

bool

true if IsSensitive


</section>

<section className="apiref-page__member-entry">

<span id="uid-7c6ed71c52"></span>

### GetLocaleHints Method

Gets the value of the attached [Avalonia.Input.TextInput.TextInputOptions.LocaleHintsProperty](xref:Avalonia.Input.TextInput.TextInputOptions.LocaleHintsProperty).

```csharp
public System.Collections.Generic.IReadOnlyList<string> GetLocaleHints(Avalonia.StyledElement avaloniaObject)
```

#### Parameters

`avaloniaObject` [Avalonia.StyledElement](xref:Avalonia.StyledElement)

The target.


#### Returns

System.Collections.Generic.IReadOnlyList&lt;string&gt;

BCP47 locale values


</section>

<section className="apiref-page__member-entry">

<span id="uid-1313e418df"></span>

### GetLowercase Method

Gets the value of the attached [Avalonia.Input.TextInput.TextInputOptions.LowercaseProperty](xref:Avalonia.Input.TextInput.TextInputOptions.LowercaseProperty).

```csharp
public bool GetLowercase(Avalonia.StyledElement avaloniaObject)
```

#### Parameters

`avaloniaObject` [Avalonia.StyledElement](xref:Avalonia.StyledElement)

The target.


#### Returns

bool

true if Lowercase


</section>

<section className="apiref-page__member-entry">

<span id="uid-25c7b5ce46"></span>

### GetMultiline Method

Gets the value of the attached [Avalonia.Input.TextInput.TextInputOptions.MultilineProperty](xref:Avalonia.Input.TextInput.TextInputOptions.MultilineProperty).

```csharp
public bool GetMultiline(Avalonia.StyledElement avaloniaObject)
```

#### Parameters

`avaloniaObject` [Avalonia.StyledElement](xref:Avalonia.StyledElement)

The target.


#### Returns

bool

true if multiline


</section>

<section className="apiref-page__member-entry">

<span id="uid-3916425cd2"></span>

### GetReturnKeyType Method

Gets the value of the attached [Avalonia.Input.TextInput.TextInputOptions.ReturnKeyTypeProperty](xref:Avalonia.Input.TextInput.TextInputOptions.ReturnKeyTypeProperty).

```csharp
public Avalonia.Input.TextInput.TextInputReturnKeyType GetReturnKeyType(Avalonia.StyledElement avaloniaObject)
```

#### Parameters

`avaloniaObject` [Avalonia.StyledElement](xref:Avalonia.StyledElement)

The target.


#### Returns

[Avalonia.Input.TextInput.TextInputReturnKeyType](xref:Avalonia.Input.TextInput.TextInputReturnKeyType)

[TextInputReturnKeyType](xref:Avalonia.Input.TextInput.TextInputReturnKeyType)


</section>

<section className="apiref-page__member-entry">

<span id="uid-1ee95a6274"></span>

### GetShowSuggestions Method

Gets the value of the attached [Avalonia.Input.TextInput.TextInputOptions.ShowSuggestionsProperty](xref:Avalonia.Input.TextInput.TextInputOptions.ShowSuggestionsProperty).

```csharp
public Nullable<bool> GetShowSuggestions(Avalonia.StyledElement avaloniaObject)
```

#### Parameters

`avaloniaObject` [Avalonia.StyledElement](xref:Avalonia.StyledElement)

The target.


#### Returns

Nullable&lt;bool&gt;

true if ShowSuggestions


</section>

<section className="apiref-page__member-entry">

<span id="uid-36255038be"></span>

### GetUppercase Method

Gets the value of the attached [Avalonia.Input.TextInput.TextInputOptions.UppercaseProperty](xref:Avalonia.Input.TextInput.TextInputOptions.UppercaseProperty).

```csharp
public bool GetUppercase(Avalonia.StyledElement avaloniaObject)
```

#### Parameters

`avaloniaObject` [Avalonia.StyledElement](xref:Avalonia.StyledElement)

The target.


#### Returns

bool

true if Uppercase


</section>

<section className="apiref-page__member-entry">

<span id="uid-3059291c6b"></span>

### SetAutoCapitalization Method

Sets the value of the attached [Avalonia.Input.TextInput.TextInputOptions.AutoCapitalizationProperty](xref:Avalonia.Input.TextInput.TextInputOptions.AutoCapitalizationProperty) on a control.

```csharp
public void SetAutoCapitalization(Avalonia.StyledElement avaloniaObject, bool value)
```

#### Parameters

`avaloniaObject` [Avalonia.StyledElement](xref:Avalonia.StyledElement)

The control.


`value` bool

The property value to set.


</section>

<section className="apiref-page__member-entry">

<span id="uid-12d030e7c0"></span>

### SetContentType Method

Sets the value of the attached [Avalonia.Input.TextInput.TextInputOptions.ContentTypeProperty](xref:Avalonia.Input.TextInput.TextInputOptions.ContentTypeProperty) on a control.

```csharp
public void SetContentType(Avalonia.StyledElement avaloniaObject, Avalonia.Input.TextInput.TextInputContentType value)
```

#### Parameters

`avaloniaObject` [Avalonia.StyledElement](xref:Avalonia.StyledElement)

The control.


`value` [Avalonia.Input.TextInput.TextInputContentType](xref:Avalonia.Input.TextInput.TextInputContentType)

The property value to set.


</section>

<section className="apiref-page__member-entry">

<span id="uid-fbcf93aa90"></span>

### SetIsSensitive Method

Sets the value of the attached [Avalonia.Input.TextInput.TextInputOptions.IsSensitiveProperty](xref:Avalonia.Input.TextInput.TextInputOptions.IsSensitiveProperty) on a control.

```csharp
public void SetIsSensitive(Avalonia.StyledElement avaloniaObject, bool value)
```

#### Parameters

`avaloniaObject` [Avalonia.StyledElement](xref:Avalonia.StyledElement)

The control.


`value` bool

The property value to set.


</section>

<section className="apiref-page__member-entry">

<span id="uid-687022e5bd"></span>

### SetLocaleHints Method

```csharp
public void SetLocaleHints(Avalonia.StyledElement avaloniaObject, System.Collections.Generic.IReadOnlyList<string> value)
```

#### Parameters

`avaloniaObject` [Avalonia.StyledElement](xref:Avalonia.StyledElement)


`value` System.Collections.Generic.IReadOnlyList&lt;string&gt;


</section>

<section className="apiref-page__member-entry">

<span id="uid-42a2046c2a"></span>

### SetLowercase Method

Sets the value of the attached [Avalonia.Input.TextInput.TextInputOptions.LowercaseProperty](xref:Avalonia.Input.TextInput.TextInputOptions.LowercaseProperty) on a control.

```csharp
public void SetLowercase(Avalonia.StyledElement avaloniaObject, bool value)
```

#### Parameters

`avaloniaObject` [Avalonia.StyledElement](xref:Avalonia.StyledElement)

The control.


`value` bool

The property value to set.


</section>

<section className="apiref-page__member-entry">

<span id="uid-f03a3b604e"></span>

### SetMultiline Method

Sets the value of the attached [Avalonia.Input.TextInput.TextInputOptions.MultilineProperty](xref:Avalonia.Input.TextInput.TextInputOptions.MultilineProperty) on a control.

```csharp
public void SetMultiline(Avalonia.StyledElement avaloniaObject, bool value)
```

#### Parameters

`avaloniaObject` [Avalonia.StyledElement](xref:Avalonia.StyledElement)

The control.


`value` bool

The property value to set.


</section>

<section className="apiref-page__member-entry">

<span id="uid-882a011968"></span>

### SetReturnKeyType Method

Sets the value of the attached [Avalonia.Input.TextInput.TextInputOptions.ReturnKeyTypeProperty](xref:Avalonia.Input.TextInput.TextInputOptions.ReturnKeyTypeProperty) on a control.

```csharp
public void SetReturnKeyType(Avalonia.StyledElement avaloniaObject, Avalonia.Input.TextInput.TextInputReturnKeyType value)
```

#### Parameters

`avaloniaObject` [Avalonia.StyledElement](xref:Avalonia.StyledElement)

The control.


`value` [Avalonia.Input.TextInput.TextInputReturnKeyType](xref:Avalonia.Input.TextInput.TextInputReturnKeyType)

The property value to set.


</section>

<section className="apiref-page__member-entry">

<span id="uid-4bebe89071"></span>

### SetShowSuggestions Method

```csharp
public void SetShowSuggestions(Avalonia.StyledElement avaloniaObject, Nullable<bool> value)
```

#### Parameters

`avaloniaObject` [Avalonia.StyledElement](xref:Avalonia.StyledElement)


`value` Nullable&lt;bool&gt;


</section>

<section className="apiref-page__member-entry">

<span id="uid-d8d5eafd7e"></span>

### SetUppercase Method

Sets the value of the attached [Avalonia.Input.TextInput.TextInputOptions.UppercaseProperty](xref:Avalonia.Input.TextInput.TextInputOptions.UppercaseProperty) on a control.

```csharp
public void SetUppercase(Avalonia.StyledElement avaloniaObject, bool value)
```

#### Parameters

`avaloniaObject` [Avalonia.StyledElement](xref:Avalonia.StyledElement)

The control.


`value` bool

The property value to set.


</section>

## Properties

| Name | Description |
| --- | --- |
| [AutoCapitalization](#uid-81e47b6145) | Automatically capitalize letters at the start of the sentence |
| [ContentType](#uid-de7fac5c5c) | The content type (mostly for determining the shape of the virtual keyboard) |
| [IsSensitive](#uid-1ec1003c2f) | Text contains sensitive data like card numbers and should not be stored |
| [LocaleHints](#uid-29119ac437) | Gets or sets the locale hints, using BCP47 values. |
| [Lowercase](#uid-c8910b8552) | Text is in lower case |
| [Multiline](#uid-dbc690ede0) | Text is multiline |
| [ReturnKeyType](#uid-794ac4f7e5) | Determines what the Return key says and how it behaves. |
| [ShowSuggestions](#uid-5e8365644f) | Show virtual keyboard suggestions |
| [Uppercase](#uid-dfa69c5a2a) | Text is in upper case |

<section className="apiref-page__member-entry">

<span id="uid-81e47b6145"></span>

### AutoCapitalization Property

Automatically capitalize letters at the start of the sentence

```csharp
public bool AutoCapitalization { get; set; }
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-de7fac5c5c"></span>

### ContentType Property

The content type (mostly for determining the shape of the virtual keyboard)

```csharp
public Avalonia.Input.TextInput.TextInputContentType ContentType { get; set; }
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-1ec1003c2f"></span>

### IsSensitive Property

Text contains sensitive data like card numbers and should not be stored

```csharp
public bool IsSensitive { get; set; }
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-29119ac437"></span>

### LocaleHints Property

Gets or sets the locale hints, using BCP47 values.

```csharp
public System.Collections.Generic.IReadOnlyList<string> LocaleHints { get; set; }
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-c8910b8552"></span>

### Lowercase Property

Text is in lower case

```csharp
public bool Lowercase { get; set; }
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-dbc690ede0"></span>

### Multiline Property

Text is multiline

```csharp
public bool Multiline { get; set; }
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-794ac4f7e5"></span>

### ReturnKeyType Property

Determines what the Return key says and how it behaves.

```csharp
public Avalonia.Input.TextInput.TextInputReturnKeyType ReturnKeyType { get; set; }
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-5e8365644f"></span>

### ShowSuggestions Property

Show virtual keyboard suggestions

```csharp
public Nullable<bool> ShowSuggestions { get; set; }
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-dfa69c5a2a"></span>

### Uppercase Property

Text is in upper case

```csharp
public bool Uppercase { get; set; }
```

</section>

## Fields

| Name | Description |
| --- | --- |
| [AutoCapitalizationProperty](#uid-c8220ab7d8) | Defines the [Avalonia.Input.TextInput.TextInputOptions.AutoCapitalization](xref:Avalonia.Input.TextInput.TextInputOptions.AutoCapitalization) property. |
| [ContentTypeProperty](#uid-5cd75ff6e5) | Defines the [Avalonia.Input.TextInput.TextInputOptions.ContentType](xref:Avalonia.Input.TextInput.TextInputOptions.ContentType) property. |
| [Default](#uid-441250e7ac) | No summary available. |
| [IsSensitiveProperty](#uid-3a39e71c6c) | Defines the [Avalonia.Input.TextInput.TextInputOptions.IsSensitive](xref:Avalonia.Input.TextInput.TextInputOptions.IsSensitive) property. |
| [LocaleHintsProperty](#uid-6fe3289236) | Defines the [Avalonia.Input.TextInput.TextInputOptions.LocaleHints](xref:Avalonia.Input.TextInput.TextInputOptions.LocaleHints) property. |
| [LowercaseProperty](#uid-a05955c1df) | Defines the [Avalonia.Input.TextInput.TextInputOptions.Lowercase](xref:Avalonia.Input.TextInput.TextInputOptions.Lowercase) property. |
| [MultilineProperty](#uid-0458d10236) | Defines the [Avalonia.Input.TextInput.TextInputOptions.Multiline](xref:Avalonia.Input.TextInput.TextInputOptions.Multiline) property. |
| [ReturnKeyTypeProperty](#uid-fc4102ab34) | Defines the [Avalonia.Input.TextInput.TextInputOptions.ReturnKeyType](xref:Avalonia.Input.TextInput.TextInputOptions.ReturnKeyType) property. |
| [ShowSuggestionsProperty](#uid-3f99c007d9) | Defines the [Avalonia.Input.TextInput.TextInputOptions.ShowSuggestions](xref:Avalonia.Input.TextInput.TextInputOptions.ShowSuggestions) property. |
| [UppercaseProperty](#uid-240ac37732) | Defines the [Avalonia.Input.TextInput.TextInputOptions.Uppercase](xref:Avalonia.Input.TextInput.TextInputOptions.Uppercase) property. |

<section className="apiref-page__member-entry">

<span id="uid-c8220ab7d8"></span>

### AutoCapitalizationProperty Field

Defines the [Avalonia.Input.TextInput.TextInputOptions.AutoCapitalization](xref:Avalonia.Input.TextInput.TextInputOptions.AutoCapitalization) property.

```csharp
public Avalonia.AttachedProperty<TValue><bool> AutoCapitalizationProperty
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-5cd75ff6e5"></span>

### ContentTypeProperty Field

Defines the [Avalonia.Input.TextInput.TextInputOptions.ContentType](xref:Avalonia.Input.TextInput.TextInputOptions.ContentType) property.

```csharp
public Avalonia.AttachedProperty<TValue><Avalonia.Input.TextInput.TextInputContentType> ContentTypeProperty
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-441250e7ac"></span>

### Default Field

```csharp
public Avalonia.Input.TextInput.TextInputOptions Default
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-3a39e71c6c"></span>

### IsSensitiveProperty Field

Defines the [Avalonia.Input.TextInput.TextInputOptions.IsSensitive](xref:Avalonia.Input.TextInput.TextInputOptions.IsSensitive) property.

```csharp
public Avalonia.AttachedProperty<TValue><bool> IsSensitiveProperty
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-6fe3289236"></span>

### LocaleHintsProperty Field

Defines the [Avalonia.Input.TextInput.TextInputOptions.LocaleHints](xref:Avalonia.Input.TextInput.TextInputOptions.LocaleHints) property.

```csharp
public Avalonia.AttachedProperty<TValue><System.Collections.Generic.IReadOnlyList<string>> LocaleHintsProperty
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-a05955c1df"></span>

### LowercaseProperty Field

Defines the [Avalonia.Input.TextInput.TextInputOptions.Lowercase](xref:Avalonia.Input.TextInput.TextInputOptions.Lowercase) property.

```csharp
public Avalonia.AttachedProperty<TValue><bool> LowercaseProperty
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-0458d10236"></span>

### MultilineProperty Field

Defines the [Avalonia.Input.TextInput.TextInputOptions.Multiline](xref:Avalonia.Input.TextInput.TextInputOptions.Multiline) property.

```csharp
public Avalonia.AttachedProperty<TValue><bool> MultilineProperty
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-fc4102ab34"></span>

### ReturnKeyTypeProperty Field

Defines the [Avalonia.Input.TextInput.TextInputOptions.ReturnKeyType](xref:Avalonia.Input.TextInput.TextInputOptions.ReturnKeyType) property.

```csharp
public Avalonia.AttachedProperty<TValue><Avalonia.Input.TextInput.TextInputReturnKeyType> ReturnKeyTypeProperty
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-3f99c007d9"></span>

### ShowSuggestionsProperty Field

Defines the [Avalonia.Input.TextInput.TextInputOptions.ShowSuggestions](xref:Avalonia.Input.TextInput.TextInputOptions.ShowSuggestions) property.

```csharp
public Avalonia.AttachedProperty<TValue><Nullable<bool>> ShowSuggestionsProperty
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-240ac37732"></span>

### UppercaseProperty Field

Defines the [Avalonia.Input.TextInput.TextInputOptions.Uppercase](xref:Avalonia.Input.TextInput.TextInputOptions.Uppercase) property.

```csharp
public Avalonia.AttachedProperty<TValue><bool> UppercaseProperty
```

</section>

</ApiRefPage>

